--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 </head>
 <body>
     <div class="all">
-    <h1>Break the siege for</h1>
+    <h1>Donate to break the siege For a maximum of </h1>
     <h1><p class="m">14.90 USDT</p></h1>
-    <h1>maximum, the new Madeleine ship will set sail from inside Gaza.</h1>
+    <h1>the Freedom Ship (New Madeleine) will set sail from inside Gaza.</h1>
     <div class="scan">
         <div class="qrcode"></div>
         <div class="img">
