--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <h4>TG5criJEHNtKxfvrA8WL9dQ9LsE2dCtNBY</h4>
         <h5>(TRX)Tron TRC20</h5>
         <h3>QR Code Scanning...</h3>
+        <a href="https://www.middleeastmonitor.com/20250531-the-madeleine-ship-a-message-of-solidarity-with-gaza-and-resolve-to-break-the-blockade/" target="_blank">What is the story of the Madeleine ship?</a>
     </div>
     </div>
 </body>
